--- a/lilypad_module.json.tmpl
+++ b/lilypad_module.json.tmpl
@@ -21,6 +21,12 @@
       "Network": {
         "Type": "None"
       },
+      "Outputs": [
+        {
+          "Name": "outputs",
+          "Path": "/outputs"
+        }
+      ],
       "PublisherSpec": {
         "Type": "IPFS"
       },
